# auto-system-healing-agent

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml
doc/: 01-architecture-overview.md  02-hexagonal-design.md  03-data-contracts-and-pipeline.md  04-cross-platform-adapters.md  05-safety-policy-and-actions.md  06-roadmap-and-testing.md  07-technology-stack.md  08-product-and-runtime.md  09-learning-and-delivery-process.md  10-milestone-p0-p1.md  11-milestone-p2.md  README.md
src/self_healing_agent/: __init__.py  __main__.py  cli.py
src/self_healing_agent/adapters/: __init__.py  fake.py  logging_notifier.py  process_cpu.py  psutil_actions.py  psutil_adapter.py  select.py  thermal_psutil.py
src/self_healing_agent/adapters/darwin/: __init__.py  psutil_darwin.py
src/self_healing_agent/adapters/linux/: __init__.py  psutil_linux.py  ranking.py
src/self_healing_agent/application/: __init__.py  pipeline.py  runner.py
src/self_healing_agent/config/: __init__.py  load.py  models.py
src/self_healing_agent/core/: __init__.py  buffer.py  detection.py  diagnosis.py  models.py  policy.py
src/self_healing_agent/ports/: __init__.py  collectors.py  notifier.py
tests/: conftest.py  test_buffer.py  test_cli.py  test_config.py  test_detection.py  test_diagnosis.py  test_linux_ranking.py  test_pipeline.py  test_policy.py  test_process_cpu.py  test_thermal_psutil.py
